<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StarterActivity">

    <Button
        android:id="@+id/button_add_course"
        android:layout_width="179dp"
        android:layout_height="223dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_enabled"
        android:drawableTop="@drawable/presentation"
        android:fontFamily="@font/aldrich"
        android:paddingTop="125px"
        android:paddingBottom="125px"
        android:text="@string/txtAddLecturer"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_loginStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_loginStudent"
        android:drawableTop="@drawable/ic_baseline_account_circle_24big"
        android:layout_width="179dp"
        android:layout_height="223dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/button_enabled"
        android:paddingTop="125px"
        android:paddingBottom="125px"
        android:fontFamily="@font/aldrich"
        android:text="@string/txtLoginStudent"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_addStudent"
        android:layout_width="179dp"
        android:layout_height="223dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_enabled"
        android:drawableTop="@drawable/ic_baseline_emoji_emotions_24big"
        android:fontFamily="@font/aldrich"
        android:paddingTop="125px"
        android:paddingBottom="125px"
        android:text="@string/textAddStudent"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_addCourse"
        app:layout_constraintEnd_toStartOf="@+id/button_add_course"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_addCourse"
        android:layout_width="179dp"
        android:layout_height="223dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/button_enabled"
        android:drawableTop="@drawable/ic_baseline_menu_book_24big"
        android:fontFamily="@font/aldrich"
        android:paddingTop="125px"
        android:paddingBottom="125px"
        android:text="@string/txtAddCourse"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_add_course"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>